logs/test-earthquake-stream.log
[2025-04-05T09:13:36.355Z] ==================================================
[2025-04-05T09:13:36.363Z] 開始測試地震智能合約生成 (流式輸出版本)
[2025-04-05T09:13:36.363Z] ==================================================
[2025-04-05T09:13:36.363Z] 測試場景: 台灣東海岸地震
[2025-04-05T09:13:36.363Z] 事件類型: Earthquake
[2025-04-05T09:13:36.363Z] 事件名稱: Taiwan East Coast Earthquake
[2025-04-05T09:13:36.363Z] 嚴重程度: 7/10
[2025-04-05T09:13:36.364Z] 位置: East Coast, Taiwan
[2025-04-05T09:13:36.367Z] 正在使用流式API生成合約...
[2025-04-05T09:14:24.504Z] ✅ 測試成功: 合約生成完成
[2025-04-05T09:14:24.504Z] 合約文件已保存到 agent_gen_contracts 目錄
[2025-04-05T09:14:24.504Z] ==================================================
[2025-04-05T09:14:24.505Z] 測試腳本執行完畢
[2025-04-05T09:17:43.509Z] ==================================================
[2025-04-05T09:17:43.517Z] 開始測試地震智能合約生成 (流式輸出版本)
[2025-04-05T09:17:43.518Z] ==================================================
[2025-04-05T09:17:43.518Z] 測試場景: 台灣東海岸地震
[2025-04-05T09:17:43.518Z] 事件類型: Earthquake
[2025-04-05T09:17:43.519Z] 事件名稱: Taiwan East Coast Earthquake
[2025-04-05T09:17:43.519Z] 嚴重程度: 7/10
[2025-04-05T09:17:43.519Z] 位置: East Coast, Taiwan
[2025-04-05T09:17:43.522Z] 正在使用流式API生成合約...
[2025-04-05T09:18:21.185Z] ✅ 測試成功: 合約生成完成
[2025-04-05T09:18:21.186Z] 合約文件已保存到 agent_gen_contracts 目錄
[2025-04-05T09:18:21.186Z] ==================================================
[2025-04-05T09:18:21.186Z] 測試腳本執行完畢
[2025-04-05T09:27:09.035Z] ==================================================
[2025-04-05T09:27:09.049Z] 開始測試地震智能合約生成 (流式輸出版本)
[2025-04-05T09:27:09.049Z] ==================================================
[2025-04-05T09:27:09.049Z] 測試場景: 台灣東海岸地震
[2025-04-05T09:27:09.049Z] 事件類型: Earthquake
[2025-04-05T09:27:09.049Z] 事件名稱: Taiwan East Coast Earthquake
[2025-04-05T09:27:09.049Z] 嚴重程度: 7/10
[2025-04-05T09:27:09.050Z] 位置: East Coast, Taiwan
[2025-04-05T09:27:09.054Z] 正在使用流式API生成合約...
[2025-04-05T09:27:53.960Z] ✅ 測試成功: 合約生成完成
[2025-04-05T09:27:53.960Z] 合約文件已保存到 agent_gen_contracts 目錄
[2025-04-05T09:27:53.960Z] ==================================================
[2025-04-05T09:27:53.960Z] 測試腳本執行完畢
[2025-04-05T10:54:54.709Z] ==================================================
[2025-04-05T10:54:54.723Z] 開始測試地震智能合約生成 (流式輸出版本)
[2025-04-05T10:54:54.723Z] ==================================================
[2025-04-05T10:54:54.724Z] 測試場景: 台灣東海岸地震
[2025-04-05T10:54:54.724Z] 事件類型: earthquake
[2025-04-05T10:54:54.724Z] 事件名稱: Taiwan East Coast Earthquake
[2025-04-05T10:54:54.724Z] 嚴重程度: 7/10
[2025-04-05T10:54:54.724Z] 位置: Taiwan East Coast
[2025-04-05T10:54:54.726Z] ❌ 測試過程中發生錯誤: callClaudeStream is not defined
[2025-04-05T10:54:54.727Z] ReferenceError: callClaudeStream is not defined
    at Object.<anonymous> (/Users/hank.tsai/Desktop/flashDAO/scripts/agent/ai/llmContractGeneratorStream.js:132:3)
    at Module._compile (node:internal/modules/cjs/loader:1734:14)
    at Object..js (node:internal/modules/cjs/loader:1899:10)
    at Module.load (node:internal/modules/cjs/loader:1469:32)
    at Function._load (node:internal/modules/cjs/loader:1286:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1491:12)
    at require (node:internal/modules/helpers:135:16)
    at testEarthquakeContract (/Users/hank.tsai/Desktop/flashDAO/test-earthquake-stream.js:55:81)
[2025-04-05T10:54:54.727Z] ==================================================
[2025-04-05T10:54:54.728Z] 測試腳本執行完畢
[2025-04-05T10:55:40.227Z] ==================================================
[2025-04-05T10:55:40.238Z] 開始測試地震智能合約生成 (流式輸出版本)
[2025-04-05T10:55:40.238Z] ==================================================
[2025-04-05T10:55:40.239Z] 測試場景: 台灣東海岸地震
[2025-04-05T10:55:40.239Z] 事件類型: earthquake
[2025-04-05T10:55:40.239Z] 事件名稱: Taiwan East Coast Earthquake
[2025-04-05T10:55:40.239Z] 嚴重程度: 7/10
[2025-04-05T10:55:40.239Z] 位置: Taiwan East Coast
[2025-04-05T10:55:40.247Z] 正在使用流式API生成合約...
[2025-04-05T10:56:04.736Z] ✅ 測試成功: 合約生成完成
[2025-04-05T10:56:04.736Z] 合約文件已保存到 agent_gen_contracts 目錄
[2025-04-05T10:56:04.737Z] ==================================================
[2025-04-05T10:56:04.737Z] 測試腳本執行完畢
[2025-04-05T11:10:52.382Z] ==================================================
[2025-04-05T11:10:52.393Z] 開始測試地震智能合約生成 (流式輸出版本)
[2025-04-05T11:10:52.393Z] ==================================================
[2025-04-05T11:10:52.393Z] 測試場景: 台灣東海岸地震
[2025-04-05T11:10:52.393Z] 事件類型: earthquake
[2025-04-05T11:10:52.393Z] 事件名稱: Taiwan East Coast Earthquake
[2025-04-05T11:10:52.394Z] 嚴重程度: 7/10
[2025-04-05T11:10:52.394Z] 位置: Taiwan East Coast
[2025-04-05T11:10:52.401Z] 正在使用流式API生成合約...
[2025-04-05T11:11:11.975Z] ✅ 測試成功: 合約生成完成
[2025-04-05T11:11:11.975Z] 合約文件已保存到 agent_gen_contracts 目錄
[2025-04-05T11:11:11.976Z] ==================================================
[2025-04-05T11:11:11.976Z] 測試腳本執行完畢
[2025-04-05T11:15:57.858Z] ==================================================
[2025-04-05T11:15:57.869Z] 開始測試地震智能合約生成 (流式輸出版本)
[2025-04-05T11:15:57.869Z] ==================================================
[2025-04-05T11:15:57.870Z] 測試場景: 台灣東海岸地震
[2025-04-05T11:15:57.870Z] 事件類型: earthquake
[2025-04-05T11:15:57.870Z] 事件名稱: Taiwan East Coast Earthquake
[2025-04-05T11:15:57.870Z] 嚴重程度: 7/10
[2025-04-05T11:15:57.870Z] 位置: Taiwan East Coast
[2025-04-05T11:15:57.879Z] 正在使用流式API生成合約...
[2025-04-05T11:15:57.903Z] ❌ 測試過程中發生錯誤: Unexpected identifier 'solidity'
[2025-04-05T11:15:57.903Z] /Users/hank.tsai/Desktop/flashDAO/scripts/agent/ai/createPrompt.js:49
  ```solidity
     ^^^^^^^^

SyntaxError: Unexpected identifier 'solidity'
    at wrapSafe (node:internal/modules/cjs/loader:1666:18)
    at Module._compile (node:internal/modules/cjs/loader:1708:20)
    at Object..js (node:internal/modules/cjs/loader:1899:10)
    at Module.load (node:internal/modules/cjs/loader:1469:32)
    at Function._load (node:internal/modules/cjs/loader:1286:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1491:12)
    at require (node:internal/modules/helpers:135:16)
    at generateSmartContract (/Users/hank.tsai/Desktop/flashDAO/scripts/agent/ai/llmContractGeneratorStream.js:166:30)
[2025-04-05T11:15:57.903Z] ==================================================
[2025-04-05T11:15:57.903Z] 測試腳本執行完畢
[2025-04-05T11:16:28.225Z] ==================================================
[2025-04-05T11:16:28.233Z] 開始測試地震智能合約生成 (流式輸出版本)
[2025-04-05T11:16:28.234Z] ==================================================
[2025-04-05T11:16:28.234Z] 測試場景: 台灣東海岸地震
[2025-04-05T11:16:28.234Z] 事件類型: earthquake
[2025-04-05T11:16:28.234Z] 事件名稱: Taiwan East Coast Earthquake
[2025-04-05T11:16:28.234Z] 嚴重程度: 7/10
[2025-04-05T11:16:28.234Z] 位置: Taiwan East Coast
[2025-04-05T11:16:28.238Z] 正在使用流式API生成合約...
[2025-04-05T11:16:49.768Z] ✅ 測試成功: 合約生成完成
[2025-04-05T11:16:49.768Z] 合約文件已保存到 agent_gen_contracts 目錄
[2025-04-05T11:16:49.768Z] ==================================================
[2025-04-05T11:16:49.768Z] 測試腳本執行完畢
[2025-04-05T11:52:18.860Z] ==================================================
[2025-04-05T11:52:18.871Z] 開始測試地震智能合約生成 (流式輸出版本)
[2025-04-05T11:52:18.871Z] ==================================================
[2025-04-05T11:52:18.872Z] 測試場景: 台灣東海岸地震
[2025-04-05T11:52:18.872Z] 事件類型: Earthquake
[2025-04-05T11:52:18.872Z] 事件名稱: Taiwan East Coast Earthquake
[2025-04-05T11:52:18.872Z] 嚴重程度: 7/10
[2025-04-05T11:52:18.872Z] 位置: East Coast, Taiwan
[2025-04-05T11:52:18.879Z] 正在使用流式API生成合約...
[2025-04-05T11:53:06.728Z] ✅ 測試成功: 合約生成完成
[2025-04-05T11:53:06.729Z] 合約文件已保存到 agent_gen_contracts 目錄
[2025-04-05T11:53:06.729Z] ==================================================
[2025-04-05T11:53:06.729Z] 測試腳本執行完畢
[2025-04-05T11:55:32.204Z] ==================================================
[2025-04-05T11:55:32.214Z] 開始測試地震智能合約生成 (流式輸出版本)
[2025-04-05T11:55:32.214Z] ==================================================
[2025-04-05T11:55:32.214Z] 測試場景: 台灣東海岸地震
[2025-04-05T11:55:32.214Z] 事件類型: Earthquake
[2025-04-05T11:55:32.215Z] 事件名稱: Taiwan East Coast Earthquake
[2025-04-05T11:55:32.215Z] 嚴重程度: 7/10
[2025-04-05T11:55:32.215Z] 位置: East Coast, Taiwan
[2025-04-05T11:55:32.219Z] 正在使用流式API生成合約...
[2025-04-05T11:56:13.639Z] ✅ 測試成功: 合約生成完成
[2025-04-05T11:56:13.640Z] 合約文件已保存到 agent_gen_contracts 目錄
[2025-04-05T11:56:13.640Z] ==================================================
[2025-04-05T11:56:13.640Z] 測試腳本執行完畢
